[tool.poetry]
name = "sqooler"
version = "0.3.0"
description = "Code that enables cloud access to quantum hardware (simulators)"
authors = ["fretchen <fred.jendrzejewski@gmail.com>"]
license = "Unlicence license"
readme = "README.md"
packages = [{include = "sqooler", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
